--- a/Portfolio/Hardware.html
+++ b/Portfolio/Hardware.html
@@ -212,10 +212,10 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard9.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard9.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -223,10 +223,10 @@
 
                                     <div class="mt-3 img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/hardware/hard11.png"
+                                                src="../Assets/Images/Handicraft/hard11.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -236,10 +236,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/hardware/hard10.png"
+                                                src="../Assets/Images/Handicraft/hard10.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -250,10 +250,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/hardware/hard12.png"
+                                                src="../Assets/Images/Handicraft/hard12.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -262,10 +262,10 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard2.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard2.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -273,10 +273,10 @@
 
                                     <div class="mt-3 img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/hardware/hard16.png"
+                                                src="../Assets/Images/Handicraft/hard16.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -289,10 +289,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/hardware/hard13.png"
+                                                src="../Assets/Images/Handicraft/hard13.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -300,10 +300,10 @@
 
                                     <div class="mt-3 img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/hardware/hard14.png"
+                                                src="../Assets/Images/Handicraft/hard14.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -313,10 +313,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/hardware/hard15.png"
+                                                src="../Assets/Images/Handicraft/hard15.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -326,10 +326,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard6.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard6.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -338,20 +338,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard3.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard3.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard4.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard4.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -361,20 +361,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard5.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard5.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard7.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard7.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -383,10 +383,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/hardware/hard8.png"
+                                        <a href=""><img src="../Assets/Images/Handicraft/hard8.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
