--- a/Portfolio/Home-Furnishing.html
+++ b/Portfolio/Home-Furnishing.html
@@ -211,20 +211,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/1.png"
+                                        <a href=""><img src="../Assets/Images/Home/1.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/2.png"
+                                        <a href=""><img src="../Assets/Images/Home/2.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -234,10 +234,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/home_furnish/bg1.png"
+                                                src="../Assets/Images/Home/bg1.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -247,10 +247,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/4.png"
+                                        <a href=""><img src="../Assets/Images/Home/4.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -259,20 +259,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/5.png"
+                                        <a href=""><img src="../Assets/Images/Home/5.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/6.png"
+                                        <a href=""><img src="../Assets/Images/Home/6.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -284,20 +284,20 @@
                                 <div class="col-md-8 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/7.png"
+                                        <a href=""><img src="../Assets/Images/Home/7.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
 
 
                                     <div class="mt-3 img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/8.png"
+                                        <a href=""><img src="../Assets/Images/Home/8.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -306,10 +306,10 @@
                                 <div class="col-md-4 mt-3 image">
 
                                     <div class="img-wrapper">
-                                        <a href=""><img src="https://axisdesigners.com/assets/images/home_furnish/9.png"
+                                        <a href=""><img src="../Assets/Images/Home/9.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -320,10 +320,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/home_furnish/10.png"
+                                                src="../Assets/Images/Home/10.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -333,10 +333,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/home_furnish/11.png"
+                                                src="../Assets/Images/Home/11.png"
                                                 class="img-responsive"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../Assets/Images/Icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
