--- a/Portfolio/Technology.html
+++ b/Portfolio/Technology.html
@@ -26,11 +26,11 @@
         expertise.="">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://axisdesigners.com/assets/images/logo.png">
-    <link rel="icon" type="image/x-icon" href="https://axisdesigners.com/assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://axisdesigners.com/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
@@ -213,10 +213,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/technology/tech.png"
+                                                src="../assets/images/technology/tech.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../assets/images/icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
@@ -227,10 +227,10 @@
 
                                     <div class="img-wrapper">
                                         <a href=""><img
-                                                src="https://axisdesigners.com/assets/images/technology/tech2.png"
+                                                src="../assets/images/technology/tech2.png"
                                                 class="img-fluid w-100"></a>
                                         <div class="img-overlay" style="opacity: 0;">
-                                            <span><img src="https://axisdesigners.com/assets/images/icons/zoomImage.png"
+                                            <span><img src="../assets/images/icon/zoomImage.png"
                                                     class="img-fluid"></span>
                                         </div>
                                     </div>
