--- a/Contact.html
+++ b/Contact.html
@@ -276,7 +276,7 @@
                     <div class="filling_form_">
                         <div class="filling_back_div"></div>
                         <p class="mb-0 font28_">Need digital solutions for your business? <span>Check out<a
-                                    href="Axisnewgen.html" class="text_gradient"> Axis New Gen</a></span></p>
+                                    href="https://axisnewgen.com/" class="text_gradient"> Axis New Gen</a></span></p>
                     </div>
                 </div>
             </div>
