--- a/Case-Study-Career.html
+++ b/Case-Study-Career.html
@@ -145,7 +145,7 @@
                 <div class="modal-body">
                     <div class="">
                         <div class="text-center">
-                            <img src="https://axisdesigners.com/assets/images/icons/start.png" class="img-fluid">
+                            <img src="/assets/images/start.png" class="img-fluid">
                             <h3 class="my-3 font36_">Newsletter</h3>
                             <p class="font20_">Sign up with us to get the latest news, updates and special offers
                                 delivered directly in your inbox</p>
@@ -184,7 +184,7 @@
             <div class="col-md-7">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <img src="https://axisdesigners.com/assets/images/carrier--156.jpg" class="img-fluid w-100">
+                    <img src="/assets/images/carrier--156.jpg" class="img-fluid w-100">
                 </div>
             </div>
         </div>
@@ -257,7 +257,7 @@
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/carrier--12.png"
+                                    <img src="/assets/images/carrier--12.png"
                                         class="img-fluid">
                                 </div>
                             </div>
@@ -265,7 +265,7 @@
                         <div class="owl-item active" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/carrier--13.png"
+                                    <img src="/assets/images/carrier--13.png"
                                         class="img-fluid">
                                 </div>
                             </div>
@@ -273,7 +273,7 @@
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/carrier--14.png"
+                                    <img src="/assets/images/carrier--14.png"
                                         class="img-fluid">
                                 </div>
                             </div>
@@ -281,7 +281,7 @@
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/carrier--15.png"
+                                    <img src="/assets/images/carrier--15.png"
                                         class="img-fluid">
                                 </div>
                             </div>
@@ -307,20 +307,20 @@
             <div class="col-md-6">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <a href="https://axisdesigners.com/case-study"><img
-                            src="https://axisdesigners.com/assets/images/case_study---1.png" class="img-fluid"></a>
+                    <a href="Case-Study.html"><img
+                            src="/assets/images/case_study---1.png" class="img-fluid"></a>
                     <div class="case_study_text">
-                        <a href="https://axisdesigners.com/case-study" class="text-white font24_">Hyatt</a>
+                        <a href="Case-Study.html" class="text-white font24_">Hyatt</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <a href="https://axisdesigners.com/case-study-hpl"> <img
-                            src="https://axisdesigners.com/assets/images/case_study---2.png" class="img-fluid"></a>
+                    <a href="Case-Study-Hpl.html"> <img
+                            src="/assets/images/case_study---2.png" class="img-fluid"></a>
                     <div class="case_study_text">
-                        <a href="https://axisdesigners.com/case-study-hpl" class="text-white font24_">HPL</a>
+                        <a href="Case-Study-Hpl.html" class="text-white font24_">HPL</a>
                     </div>
                 </div>
             </div>
@@ -369,7 +369,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text_right t_center">
-                        <a href="https://axisdesigners.com/contact" class="btn btn_transparent">Contact Us</a>
+                        <a href="Contact.html" class="btn btn_transparent">Contact Us</a>
                     </div>
                 </div>
             </div>
