--- a/Case-Study-Hpl.html
+++ b/Case-Study-Hpl.html
@@ -53,8 +53,8 @@
     <section class="">
         <header>
             <nav class="navbar navbar-expand-lg  bg-light">
-                <a class="navbar-brand nav-logo" href="Index.html"><img
-                        src="Assets/Images/logo.png" class="img-fluid"></a>
+                <a class="navbar-brand nav-logo" href="Index.html"><img src="Assets/Images/logo.png"
+                        class="img-fluid"></a>
                 <div class="mobile-check">
                     <a class="" href="Contact.html"><button class="btn btn_grad text-white">Get
                             Free Consultation</button></a>
@@ -67,10 +67,9 @@
 
                 <div class="collapse navbar-collapse nav_header pl__5" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item dropdown">    
-                            <a class="nav-link dropdown-toggle" href="About-Us.html"
-                                id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="About-Us.html" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 About
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -185,7 +184,7 @@
             <div class="col-md-7">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <img src="https://axisdesigners.com/assets/images/case_study---2.png" class="img-fluid w-100">
+                    <img src="/assets/images/case_study---2.png" class="img-fluid w-100">
                 </div>
             </div>
         </div>
@@ -273,35 +272,35 @@
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hpl--1.png" class="img-fluid">
+                                    <img src="/assets/images/hpl--1.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hpl--12.png" class="img-fluid">
+                                    <img src="/assets/images/hpl--12.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hpl--13.png" class="img-fluid">
+                                    <img src="/assets/images/hpl--13.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hpl--14.png" class="img-fluid">
+                                    <img src="/assets/images/hpl--14.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="owl-item active" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hpl--15.png" class="img-fluid">
+                                    <img src="/assets/images/hpl--15.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -327,20 +326,20 @@
             <div class="col-md-6">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <a href="https://axisdesigners.com/case-study"><img
-                            src="https://axisdesigners.com/assets/images/case_study---1.png" class="img-fluid"></a>
+                    <a href="Case-Study.html"><img
+                            src="/assets/images/case_study---1.png" class="img-fluid"></a>
                     <div class="case_study_text">
-                        <a href="https://axisdesigners.com/case-study" class="text-white font24_">Hyatt</a>
+                        <a href="Case-Study.html" class="text-white font24_">Hyatt</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <a href="https://axisdesigners.com/case-study-carrier"><img
-                            src="https://axisdesigners.com/assets/images/case_study---3.png" class="img-fluid"></a>
+                    <a href="Case-Study-Career.html"><img
+                            src="/assets/images/case_study---3.png" class="img-fluid"></a>
                     <div class="case_study_text">
-                        <a href="https://axisdesigners.com/case-study-carrier" class="text-white font24_">Carrier</a>
+                        <a href="Case-Study-Career.html" class="text-white font24_">Carrier</a>
                     </div>
                 </div>
             </div>
@@ -389,7 +388,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text_right t_center">
-                        <a href="https://axisdesigners.com/contact" class="btn btn_transparent">Contact Us</a>
+                        <a href="Contact.html" class="btn btn_transparent">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -402,8 +401,7 @@
                 <div class="col-md-3 col-12">
                     <div class="footer_links mt-0">
                         <a class="" href="Index.html">
-                            <img src="Assets/Images/Logo/logo-white.png"
-                                class="img-fluid w_70" /></a>
+                            <img src="Assets/Images/Logo/logo-white.png" class="img-fluid w_70" /></a>
                         <ul class="p-0 mb-0 mt-4 list-unstyled">
                             <li>
                                 <span class="text_gradient mr-2"><i class="fas fa-envelope"></i></span><a
@@ -479,32 +477,32 @@
                             <li class="mr-2">
                                 <div class="h-100px w-100px">
                                     <a href="https://www.instagram.com/p/CWhsSmGPWST/" target="_blank">
-                                        <img src="Assets/Images/1639645196_axis-1.jpg"
-                                            class="img-fluid w-100" style="height: 100px !important" />
+                                        <img src="Assets/Images/1639645196_axis-1.jpg" class="img-fluid w-100"
+                                            style="height: 100px !important" />
                                     </a>
                                 </div>
                             </li>
                             <li class="mr-2">
                                 <div class="h-100px w-100px">
                                     <a href="https://www.instagram.com/p/CWC927ipyQI/" target="_blank">
-                                        <img src="Assets/Images/1639645196_axis-2.jpg"
-                                            class="img-fluid w-100" style="height: 100px !important" />
+                                        <img src="Assets/Images/1639645196_axis-2.jpg" class="img-fluid w-100"
+                                            style="height: 100px !important" />
                                     </a>
                                 </div>
                             </li>
                             <li class="mr-2">
                                 <div class="h-100px w-100px">
                                     <a href="https://www.instagram.com/p/CXQTQ8svjVh/" target="_blank">
-                                        <img src="Assets/Images/1639645196_axis-3.jpg"
-                                            class="img-fluid w-100" style="height: 100px !important" />
+                                        <img src="Assets/Images/1639645196_axis-3.jpg" class="img-fluid w-100"
+                                            style="height: 100px !important" />
                                     </a>
                                 </div>
                             </li>
                             <li class="mr-2">
                                 <div class="h-100px w-100px">
                                     <a href="https://www.instagram.com/p/CVe9mPhpoDV/" target="_blank">
-                                        <img src="Assets/Images/1639645196_axis-4.jpg"
-                                            class="img-fluid w-100" style="height: 100px !important" />
+                                        <img src="Assets/Images/1639645196_axis-4.jpg" class="img-fluid w-100"
+                                            style="height: 100px !important" />
                                     </a>
                                 </div>
                             </li>
