--- a/Case-Study.html
+++ b/Case-Study.html
@@ -147,7 +147,7 @@
                 <div class="modal-body">
                     <div class="">
                         <div class="text-center">
-                            <img src="https://axisdesigners.com/assets/images/icons/start.png" class="img-fluid">
+                            <img src="/assets/images/start.png" class="img-fluid">
                             <h3 class="my-3 font36_">Newsletter</h3>
                             <p class="font20_">Sign up with us to get the latest news, updates and special offers
                                 delivered directly in your inbox</p>
@@ -186,7 +186,7 @@
             <div class="col-md-7">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <img src="https://axisdesigners.com/assets/images/hyatt.png" class="img-fluid w-100">
+                    <img src="/assets/images/hyatt.png" class="img-fluid w-100">
                 </div>
             </div>
         </div>
@@ -257,28 +257,28 @@
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hyatt--1.png" class="img-fluid">
+                                    <img src="/assets/images/hyatt--1.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="owl-item active" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hyatt--12.png" class="img-fluid">
+                                    <img src="/assets/images/hyatt--12.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hyatt--13.png" class="img-fluid">
+                                    <img src="/assets/images/hyatt--13.png" class="img-fluid">
                                 </div>
                             </div>
                         </div>
                         <div class="owl-item" style="width: 1343px;">
                             <div class="item bigMOb position-relative">
                                 <div class=" ">
-                                    <img src="https://axisdesigners.com/assets/images/hyatt--14.png" class="img-fluid">
+                                    <img src="/assets/images/hyatt--14.png " class="img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -303,20 +303,20 @@
             <div class="col-md-6">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <a href="https://axisdesigners.com/case-study-hpl"><img
-                            src="https://axisdesigners.com/assets/images/case_study---2.png" class="img-fluid"></a>
+                    <a href="Case-Study-Hpl.html"><img
+                            src="assets/images/case_study---2.png" class="img-fluid"></a>
                     <div class="case_study_text">
-                        <a href="https://axisdesigners.com/case-study-hpl" class="text-white font24_">HPL</a>
+                        <a href="Case-Study-Hpl.html" class="text-white font24_">HPL</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <a href="https://axisdesigners.com/case-study-carrier"> <img
-                            src="https://axisdesigners.com/assets/images/case_study---3.png" class="img-fluid"></a>
+                    <a href="Case-Study-Career.html"> <img
+                            src="assets/images/case_study---3.png" class="img-fluid"></a>
                     <div class="case_study_text">
-                        <a href="https://axisdesigners.com/case-study-carrier" class="text-white font24_">Carrier</a>
+                        <a href="Case-Study-Career.html" class="text-white font24_">Carrier</a>
                     </div>
                 </div>
             </div>
@@ -365,7 +365,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text_right t_center">
-                        <a href="https://axisdesigners.com/contact" class="btn btn_transparent">Contact Us</a>
+                        <a href="Contact.html" class="btn btn_transparent">Contact Us</a>
                     </div>
                 </div>
             </div>
