--- a/Our-Services.html
+++ b/Our-Services.html
@@ -228,7 +228,7 @@
         <div class="position-relative serve_pag">
             <!-- <img src="Assets/Images/service3.png" class="img-fluid" /> -->
             <div class="about_side">
-                <p class="mb-0 font28_">Need digital solutions for your business?  <span>Check out<a href="Axisnewgen.html" class="text_gradient"> Axis New Gen</a></span></p>
+                <p class="mb-0 font28_">Need digital solutions for your business?  <span>Check out<a href="https://axisnewgen.com/" class="text_gradient"> Axis New Gen</a></span></p>
             </div>
         </div>
     </section>
