--- a/Case-Study-List.html
+++ b/Case-Study-List.html
@@ -146,7 +146,7 @@
                 <div class="modal-body">
                     <div class="">
                         <div class="text-center">
-                            <img src="https://axisdesigners.com/assets/images/icons/start.png" class="img-fluid">
+                            <img src="/assets/images/start.png" class="img-fluid">
                             <h3 class="my-3 font36_">Newsletter</h3>
                             <p class="font20_">Sign up with us to get the latest news, updates and special offers
                                 delivered directly in your inbox</p>
@@ -168,7 +168,7 @@
 
     <section class="">
         <div class="position-relative">
-            <img src="https://axisdesigners.com/assets/images/servicesBanner.png" class="w-100 h_250px img-fluid">
+            <img src="/assets/images/servicesBanner.png" class="w-100 h_250px img-fluid">
             <h2 class="font48_ top_head_title">Case Studies</h2>
         </div>
     </section>
@@ -177,19 +177,19 @@
             <div class="col-md-5">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <img src="https://axisdesigners.com/assets/images/case_study---1.png" class="img-fluid">
+                    <img src="/assets/images/case_study---1.png" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-7">
                 <div class="mt_30">
-                    <a href="https://axisdesigners.com/case-study" class="font28_ text-dark d-block">Hyatt</a>
+                    <a href="Case-Study.html" class="font28_ text-dark d-block">Hyatt</a>
                     <span class="font20_">A Hospitality Company</span>
                     <div class="mt-4">
                         <p class="font16_">We understand the value of time your brand spends at an exhibition, hence we
                             efficiently convey all that you want to say to your visitors</p>
                     </div>
                     <div class="mt-3">
-                        <a href="https://axisdesigners.com/case-study" class="btn btn_grad text-white">Know More</a>
+                        <a href="Case-Study.html" class="btn btn_grad text-white">Know More</a>
                     </div>
                 </div>
             </div>
@@ -198,19 +198,19 @@
             <div class="col-md-5">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <img src="https://axisdesigners.com/assets/images/carrier--156.jpg" class="img-fluid">
+                    <img src="/assets/images/carrier--156.jpg" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-7">
                 <div class="mt_30">
-                    <a href="https://axisdesigners.com/case-study-carrier" class="font28_ text-dark d-block">Carrier</a>
+                    <a href="Case-Study-Career.html" class="font28_ text-dark d-block">Carrier</a>
                     <span class="font20_">A Home appliance company</span>
                     <div class="mt-4">
                         <p class="font16_">To live and operate in a space that reflects what lives within you is a bliss
                             in itself and we never shy away from creating blissful experiences.</p>
                     </div>
                     <div class="mt-3">
-                        <a href="https://axisdesigners.com/case-study-carrier" class="btn btn_grad text-white">Know
+                        <a href="Case-Study-Career.html" class="btn btn_grad text-white">Know
                             More</a>
                     </div>
                 </div>
@@ -220,19 +220,19 @@
             <div class="col-md-5">
                 <div class="position-relative">
                     <div class="exibition_btn"> Exhibition &amp; Events</div>
-                    <img src="https://axisdesigners.com/assets/images/case_study---2.png" class="img-fluid">
+                    <img src="/assets/images/case_study---2.png" class="img-fluid">
                 </div>
             </div>
             <div class="col-md-7">
                 <div class="mt_30">
-                    <a href="https://axisdesigners.com/case-study-hpl" class="font28_ text-dark d-block">HPL</a>
+                    <a href="Case-Study-Hpl.html" class="font28_ text-dark d-block">HPL</a>
                     <span class="font20_">An Electrical &amp; Power Company</span>
                     <div class="mt-2">
                         <p class="font16_">With every brand comes a vision and a message, we deliver it intricately by
                             creating a space inspired by you, for you.</p>
                     </div>
                     <div class="mt-3">
-                        <a href="https://axisdesigners.com/case-study-hpl" class="btn btn_grad text-white">Know More</a>
+                        <a href="Case-Study-Hpl.html" class="btn btn_grad text-white">Know More</a>
                     </div>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text_right t_center">
-                        <a href="https://axisdesigners.com/contact" class="btn btn_transparent">Contact Us</a>
+                        <a href="Contact.html" class="btn btn_transparent">Contact Us</a>
                     </div>
                 </div>
             </div>
