--- a/Our-Services.html
+++ b/Our-Services.html
@@ -193,7 +193,7 @@
                     <p class="font16_">Every brand has a unique vision and message, and we bring yours to life by creating a space inspired by you, for you. Your customers shouldn't just be aware of your existence and services; they should understand what you stand for. With over 25 years of experience and undiminished passion, why not choose us as <b>the best exhibition service provider in Germany?</b></p>
                     </div>
                     <div class="mt-3">
-                        <a href="/Portfolio/Branding.html" class="btn btn_grad text-white">Know More</a>
+                        <a href="Portfolio/Branding.html" class="btn btn_grad text-white">Know More</a>
                     </div>
                 </div>
             </div>
@@ -217,7 +217,7 @@
                         <p class="font16_">We believe in creating spaces that reflect your essence, where living and working feel like bliss, and we're all about creating those joyful experiences. Architecture and interior design are not just the bones of any physical place or home; they are the heart of Axis Designers. Axis Designers is the <b>best exhibition design companies in Germany. </b>Our talented team of architects and designers is passionate about crafting spaces that resonate with your personal style. We specialize in building spaces for your favorite brands, ensuring each environment feels uniquely yours.</p>
                     </div>
                     <div class="mt-3">
-                        <a href="/Portfolio/Architecture.html" class="btn btn_grad text-white">Know More</a>
+                        <a href="Portfolio/Architecture.html" class="btn btn_grad text-white">Know More</a>
                     </div>
                 </div>
             </div>
